/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

syntax = "proto3";

package messages.input;

import "google/protobuf/timestamp.proto";

message SoundSettings {
    uint32 sample_rate = 1;
    uint32 channels = 2;
    uint32 chunk_size = 3;
}

message Sound {
    message Channel {
        enum Format {
            UNKNOWN = 0;
            SINT_32 = 1;
        }
        Format format = 1;
        bytes data = 2;
    }

    google.protobuf.Timestamp end = 1;
    repeated Channel channel = 2;
}
